--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,22 +24,15 @@ pytest-cov = "^3.0.0"
 pytest-mock = "^3.7.0"
 vulture = "^2.3"
 bandit = "^1.7.4"
-isort = "^5.10.1"
-black = "^22.3.0"
+isort = {extras = ["jupyter"], version = "^5.10.1"}
+black = {extras = ["jupyter"], version = "^22.3.0"}
 safety = "^1.10.3"
-mypy = "^0.942"
+mypy = {extras = ["jupyter"], version = "^0.950"}
 pylint = "^2.13.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.black]
-line-length = 100
-
 [tool.isort]
 profile = "black"
-
-[tool.pylint.format]
-max-line-length = 100
-
