--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,7 @@ dmypy.json
 .env*
 /mondaydotcom-notebooks/_output
 /mondaydotcom-notebooks/_cache
+
+# dagger ignores, as more than dependencies are included
+cue.mod/pkg
+cue.mod/usr
