--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ license = "BSD-3"
 python = "~3.9"  # hard dependency, https://github.com/smartsheet-platform/smartsheet-python-sdk/issues/173
 pandas = "^1.4.2"
 papermill = "^2.3.4"
-pywin32 = "304"
+pywin32 = {version = "304", platform = "windows"}
 prefect = {extras = ["all"], version = "^1.2.1"}
 jupyter = "^1.0.0"
 mondaydotcom-utils = {git = "https://github.com/CUHealthAI/mondaydotcom-utils", rev = "main"}
@@ -29,6 +29,8 @@ black = {extras = ["jupyter"], version = "^22.3.0"}
 safety = "^1.10.3"
 mypy = {extras = ["jupyter"], version = "^0.950"}
 pylint = "^2.13.7"
+nbqa = "^1.3.1"
+nbconvert = "^6.5.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
