--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,12 @@ papermill = "^2.3.4"
 pywin32 = {version = "304", platform = "windows"}
 prefect = {extras = ["all"], version = "^1.2.1"}
 jupyter = "^1.0.0"
-mondaydotcom-utils = {git = "https://github.com/CUHealthAI/mondaydotcom-utils", rev = "main"}
+mondaydotcom-utils = {git = "https://github.com/CUHealthAI/mondaydotcom-utils", rev = "v0.2"}
 scrapbook = {extras = ["all"], version = "^0.5.0"}
 PyNaCl = "^1.5.0"
 python-dotenv = {extras = ["cli"], version = "^0.20.0"}
 smartsheet-python-sdk = "^2.105.1"
+jsonschema = "^4.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
@@ -31,6 +32,7 @@ mypy = {extras = ["jupyter"], version = "^0.950"}
 pylint = "^2.13.7"
 nbqa = "^1.3.1"
 nbconvert = "^6.5.0"
+nb-black = "^1.0.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
