--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ python = "~3.9"  # hard dependency, https://github.com/smartsheet-platform/smart
 pandas = "^1.4.2"
 papermill = "^2.3.4"
 pywin32 = {version = "304", platform = "windows"}
-prefect = {extras = ["all"], version = "^1.2.1"}
 jupyter = "^1.0.0"
 mondaydotcom-utils = {git = "https://github.com/CUHealthAI/mondaydotcom-utils", rev = "v0.2"}
 scrapbook = {extras = ["all"], version = "^0.5.0"}
@@ -18,6 +17,7 @@ PyNaCl = "^1.5.0"
 python-dotenv = {extras = ["cli"], version = "^0.20.0"}
 smartsheet-python-sdk = "^2.105.1"
 jsonschema = "^4.6.0"
+prefect = {version = ">=2.0b", extras = ["all"]}
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
