--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ PyNaCl = "^1.5.0"
 python-dotenv = {extras = ["cli"], version = "^0.20.0"}
 smartsheet-python-sdk = "^2.105.1"
 jsonschema = "^4.6.0"
-prefect = {version = ">=2.0b", extras = ["all"]}
+prefect = {extras = ["all"], version = "^2.0b"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
