--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["CU Health AI Software Engineering <cuhealthai-softwareengineering@cu
 license = "BSD-3"
 
 [tool.poetry.dependencies]
-python = "~3.9"  # hard dependency, https://github.com/smartsheet-platform/smartsheet-python-sdk/issues/173
+python = "~3.10"
 pandas = "^1.4.2"
 papermill = "^2.3.4"
 pywin32 = {version = "304", platform = "windows"}
@@ -17,7 +17,7 @@ PyNaCl = "^1.5.0"
 python-dotenv = {extras = ["cli"], version = "^0.20.0"}
 smartsheet-python-sdk = "^2.105.1"
 jsonschema = "^4.6.0"
-prefect = {extras = ["all"], version = "^2.0b"}
+prefect = {extras = ["all"], version = "^2.0.0"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
@@ -27,8 +27,8 @@ vulture = "^2.3"
 bandit = "^1.7.4"
 isort = {extras = ["jupyter"], version = "^5.10.1"}
 black = {extras = ["jupyter"], version = "^22.3.0"}
-safety = "^1.10.3"
-mypy = {extras = ["jupyter"], version = "^0.950"}
+safety = "^2.1.1"
+mypy = {extras = ["jupyter"], version = "^0.971"}
 pylint = "^2.13.7"
 nbqa = "^1.3.1"
 nbconvert = "^6.5.0"
