--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-dotenv = {extras = ["cli"], version = "^0.20.0"}
 smartsheet-python-sdk = "^2.105.1"
 jsonschema = "^4.6.0"
 prefect = {extras = ["all"], version = "^2.0.0"}
+mistune = "^2.0.4" # hard version because of dependabot issue
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
@@ -30,8 +31,7 @@ black = {extras = ["jupyter"], version = "^22.3.0"}
 safety = "^2.1.1"
 mypy = {extras = ["jupyter"], version = "^0.971"}
 pylint = "^2.13.7"
-nbqa = "^1.3.1"
-nbconvert = "^6.5.0"
+nbqa = "^1.4.0"
 nb-black = "^1.0.7"
 
 [build-system]
