Updating nbproject into 7x for mistune issue

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,16 +15,15 @@ mondaydotcom-utils = {git = "https://github.com/CUHealthAI/mondaydotcom-utils", 
 scrapbook = {extras = ["all"], version = "^0.5.0"}
 PyNaCl = "^1.5.0"
 python-dotenv = {extras = ["cli"], version = "^0.20.0"}
-smartsheet-python-sdk = "^2.105.1"
+smartsheet-python-sdk = "^2.177.1"
 jsonschema = "^4.6.0"
-prefect = {extras = ["all"], version = "^2.0.0"}
-mistune = "^2.0.4" # hard version because of dependabot issue
+prefect = {extras = ["all"], version = "^2.0.4"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
 pytest-mock = "^3.7.0"
-vulture = "^2.3"
+vulture = "^2.5"
 bandit = "^1.7.4"
 isort = {extras = ["jupyter"], version = "^5.10.1"}
 black = {extras = ["jupyter"], version = "^22.3.0"}
@@ -32,6 +31,8 @@ safety = "^2.1.1"
 mypy = {extras = ["jupyter"], version = "^0.971"}
 pylint = "^2.13.7"
 nbqa = "^1.4.0"
+nbconvert = "^7.0.0rc3" # includes mistune 2.x+
+mistune = "^2.0.4"
 nb-black = "^1.0.7"
 
 [build-system]
